--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ffccd5;
+    background-color: #ae00ff;
     font-family: 'Arial', sans-serif;
     flex-direction: column;
 }
