--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     border-radius: 5px;
+    object-fit: contain;
     transition: transform 0.5s ease-in-out;
 }
 
